--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,10 @@
     android:orientation="vertical" >
 
     <ImageView
+        android:scaleType="centerCrop"
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:src="@drawable/vsb" />
 
     <Button
@@ -32,6 +33,13 @@
         android:gravity="center_horizontal"
         android:onClick="buttonClick"
         android:text="Blur" />
+    <Button
+        android:id="@+id/button_original"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:onClick="buttonClick"
+        android:text="Original" />
 
 </LinearLayout>
 
